changes to about

--- a/index.html
+++ b/index.html
@@ -78,9 +78,19 @@ Eventually, we switched to a more realistic plan to pack our few belongings in a
     </div>
     
     <div class="section" id="About">
-<!--            <img src="img/what.png" id="what">-->
+<!--            <img src="img/what.png" id="what">-->      
         <div class="content">
             <img src="./img/titles/about.png" alt="About" class="titles">
+            <br>
+            <br>
+            <img src="./img/titles/when.png" alt="About" class="titles">
+            <br>
+            <br>
+            <p>The trip will start in summer 2016 depending on the plane tickets we can get and will be more or less 1 year long.</p>
+            <img src="./img/titles/where.png" alt="About" class="titles">
+            <p>South America and Asia. Our exact itinerary is still in the clouds but we would like to start in South America and then make our way up along the west coast to North America. There, we will hope on a plane to South Asia - what we do there depends on the resources we have and the location where we'd get.</p>
+            <img src="./img/titles/how.png" alt="About" class="titles">
+            <p></p>
     <p id="scroll">So far the plan is to find cheap plane tickets to South America - Chile or Argentina would be the best. Once we’re there, we will get motorbikes, which will be our mean of transport. Heading up north, our aim is to explore the splendid nature, spend time with locals and get a grasp of what it’s like to live there. None of us has ever been to South America and we strive to discover what this region has to offer. Our time frame for the American continent is about 6 months time, after which we plan to fly to Asia from either Seattle or Vancouver. Another 6+ months in Asia, we want explore as many countries and cultures as we can but this is way ahead.</p>
     </div>
         </div>
