--- a/pics.html
+++ b/pics.html
@@ -17,8 +17,8 @@ layout: default
 <div class="row" id="links">
 {% for image in site.static_files %}
         {% if image.path contains 'original' %}
-        <a class="col-xs-6 col-sm-4 col-lg-2 nopadding" href="{{ site.baseurl }}{{ image.path }}" alt="image.path">
-    <img src="{{ site.baseurl }}{{ image.path | replace: 'original', 'thumbnail' }}" alt="{{ image.path }}">
+        <a class="col-lg-2 col-md-2 col-sm-3 col-xs-4 nopadding" href="{{ site.baseurl }}{{ image.path }}" alt="image.path">
+    <img class="img-responsive" src="{{ site.baseurl }}{{ image.path | replace: 'original', 'thumbnail' }}" alt="{{ image.path }}">
     </a>  
     {% endif %}    
    {% endfor %} 
