--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@ layout: default
 
 <h1 class="center">About</h1>
 
-<div class="container">
+<div class="container center">
 <p>There are some things in life that keep you going, they give you motivation to do do what you do and to do more.</p>
 
 <p>Year in a backpack was born out of the desire to experience, feel and discover exactly those things. </p>
