improved menu, lazyload, gallery image loading by most recent

--- a/map.html
+++ b/map.html
@@ -1,7 +1,8 @@
 ---
 layout: default
 ---
-<div class="container-fluid fill">
-      <iframe id="GMaps" src="https://www.google.com/maps/d/embed?mid=1OGmIt94HZaIg38Wxfl9-833P7mM&z=2.25" width="100%" height="100%" frameborder="0" align="right"></iframe>
+    <img id=#intro src="/img/googlemapblackwhiteoptim.png">
+<div class="container fill content">
+    <h1 class="center">Where are we?</h1>
+      <iframe class="center-block" id="GMaps" src="https://www.google.com/maps/d/embed?mid=1OGmIt94HZaIg38Wxfl9-833P7mM&z=2.25" width="80%" height="80%" frameborder="0"></iframe>
           </div>
-    
