--- a/news.html
+++ b/news.html
@@ -25,7 +25,7 @@ thingToRemove.parentNode.removeChild("h1.referral");
     
 <hr>
 
-<div class="youtube">
+<div class="video-container">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLbJUT6CPazqEeOQOMkozxNCxuPeUBelE2" frameborder="0" allowfullscreen></iframe>
 
     </div>
