some changes to fonts

--- a/about.html
+++ b/about.html
@@ -9,7 +9,13 @@ layout: default
 
 <p>Year in a backpack was born out of the desire to experience, feel and discover exactly those things. </p>
     
-
+<form class="contact-form center" action="http://formspree.io/yearinabackpack@gmail.com">
+    <div class="list-inline">
+    <label>Your Email</label><input type="email" name="_replyto"></div>
+    <div class="list-inline"><label>Your Message</label><textarea label="Your Message" name="body"></textarea></div>
+  <input type="submit" value="Send">
+</form>
+    
 </div>
 </div>
 {% include signature.html %}
