--- a/stats.html
+++ b/stats.html
@@ -6,7 +6,8 @@ layout: default
       <div class="container center">
           <h1 class="center">Stats</h1>
           <h5>Budget: $8000 (or 200k CZK)</h5>
-      <div class="financials"><h5>Financials</h5>
+      <div class="financials">
+          <h5>Financials</h5>
           <iframe src="https://docs.google.com/spreadsheets/d/1N8HEh1r_7TlTFnWyJT7E64R9_O-X5BMRh9tINusUxfs/preview?usp=drivesdk widget=true&amp;headers=false"></iframe>
           </div>
           </div>
