--- a/index.html
+++ b/index.html
@@ -22,17 +22,14 @@ nextLocation: Venice
             </div>
 </div>
 
-<div id="information" class="container content center below-intro">
-    <ul class="row">
-    <li class="col-xs-12 col-sm-4 col-lg-2 center">
-    We are in {{page.currentlocation}}</li>
-    <li class="col-xs-12 col-sm-4 col-lg-2 center">
-    </li>
-    <li class="col-xs-12 col-sm-4 col-lg-2 center">
-    </li>
-    <li class="col-xs-12 col-sm-4 col-lg-2 center">
-    </li>
-    <li class="col-xs-12 col-sm-4 col-lg-2 center">
-    </li>
-</ul>
+<div id="information" class="center container-fluid below-intro row">
+    <div class="col-xs-12 col-sm-6 col-lg-3 center">
+    <p>We are in {{page.currentLocation}}</p>
+        <p>We are going to {{page.nextLocation}}</p></div>
+        {% for post in site.posts limit: 1 %}
+    <div class="col-xs-12 col-sm-6 col-lg-3 center">Read our latest <a href="{{ post.url }}">post</a>
+        </div>{% endfor %}
+    <div class="col-xs-12 col-sm-6 col-lg-3 center">
+        Check out fresh <a href="/news.html">news</a></div>
+        <div class="col-xs-12 col-sm-6 col-lg-3 center">Look at <a href="/pics.html">pictures</a></div>
 </div>
