--- a/tags.html
+++ b/tags.html
@@ -1,15 +1,12 @@
 ---
 layout: default
-permalink: /Tags/
-title: Countries
+permalink: /tags/
+title: Tags
 ---
 
 
 
 <div class="container">
-
-
-    
 <h1 class="center">Tags</h1>
     {% for tag in site.tags %}
     {% capture tag_name %}{{ tag | first }}{% endcapture %}
