--- a/news.html
+++ b/news.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+permalink: /news
 ---
 <div class="center">
 <h1>News</h1>
@@ -26,8 +27,7 @@ thingToRemove.parentNode.removeChild("h1.referral");
 <hr>
 
 <div class="video-container">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLbJUT6CPazqEeOQOMkozxNCxuPeUBelE2" frameborder="0" allowfullscreen></iframe>
-
+    <iframe src="https://www.youtube.com/embed/videoseries?list=PLbJUT6CPazqEeOQOMkozxNCxuPeUBelE2" frameborder="0" allowfullscreen></iframe>
     </div>
     
 
