--- a/pics.html
+++ b/pics.html
@@ -1,5 +1,6 @@
 --- 
 layout: default
+permalink: /pics
 ---
 <link rel="stylesheet" href="/css/blueimp-gallery.css">
 <link rel="stylesheet" href="/css/blueimp-gallery.css">
