--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 ---
 layout: default
 fontstyle: 'white'
-currentLocation: Prague
-nextLocation: Venice
 ---
 <link href="/css/intro_{{ page.fontstyle }}.css" rel="stylesheet">
 
@@ -14,9 +12,8 @@ nextLocation: Venice
      <a href="http://www.facebook.com/yearinabackpack" id="btnFb">facebook</a>
      <a href="http://www.twitter.com/YearinaBackpack" id="btnTw" class="socialMargin">twitter</a>
               <a href="http://www.instagram.com/yearinabackpack" id="socialMargin btnInstagram">instagram</a>
-              <a href="mailto:info@yearinabackpack.com" id="btnMail">mail</a>
+              <a href="mailto:hello@yearinabackpack.com" id="btnMail">mail</a>
            
-    </div>
-            
+    </div>       
 </div>
 </div>
