--- a/journal.html
+++ b/journal.html
@@ -5,7 +5,7 @@ permalink: /journal
       
       <div class="container center">
         <h1>Journal</h1>
-        <p>Three fresh posts.</p>
+        <p>Three fresh posts below.</p>
           <ul class="journal row">
   {% for post in site.posts limit: 3 %}
     <li class="col-md-4">
@@ -30,7 +30,7 @@ permalink: /journal
 
 <div class="container center">
     <a class="normal-font" href="{{ site.baseurl }}/archive"><h1>Archive</h1></a>
-           <p>Posts' archive sorted by most recent first.</p>
+           <p>Posts sorted by most recent first.</p>
           <ul class="journal row">
   {% for post in site.posts limit: 10 %}
     <li class="col-xs-12 col-sm-4 col-lg-2 center">
