Changed signature and map

--- a/map.html
+++ b/map.html
@@ -7,7 +7,7 @@ next-location: "Venice"
     
 <div class="container fill">
     <h1 class="center">Map</h1>
-    <p class="center">Follow our journey on a map. Right now, we are in <b>{{ page.current-location }}</b> and are going to <b>{{ page.next-location }}</b>. Come join us :)</p>
+    <p class="center">Follow our journey on a map. Come join us :)</p>
     <iframe class="center-block" style="padding-bottom:2em;" id="GMaps" src="https://www.google.com/maps/d/u/2/embed?mid=1n_D3vW1uBFLTrFud5GLe5sC43Pg&z=2.25" width="80%" height="80%" frameborder="0"></iframe>  
     
           </div>
