--- a/countries.html
+++ b/countries.html
@@ -2,6 +2,7 @@
 layout: default
 permalink: /countries/
 title: Countries
+description: "Posts from Yearinabackpack sorted by country. "
 ---
 
 <div class="container">
