--- a/journal.html
+++ b/journal.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 permalink: /journal
+title: Journal
+description: "Travel blog from Year in a backpack. Read our regular posts and enjoy the experiences and feelings from travelling in South America with us. "
 ---
       
       <div class="container center">
