--- a/map.html
+++ b/map.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 permalink: /map
-current-location: "Prague"
-next-location: "Venice"
+title: Map
+description: "Follow our journey on a map and see where we have been."
 ---
     
 <div class="container fill">
