--- a/news.html
+++ b/news.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 permalink: /news
+title: News feed
+description: "Stay tuned for fresh backpacking news from our Twitter, Instagram and YouTube channels."
 ---
 <div class="center">
 <h1>News</h1>
