--- a/photo.html
+++ b/photo.html
@@ -1,6 +1,8 @@
 --- 
 layout: default
-permalink: /pics
+permalink: /photo
+title: Photographs
+description: "Photographs from two guys backpacking America and Asia."
 ---
 <link rel="stylesheet" href="/css/blueimp-gallery.css">
 <link rel="stylesheet" href="/css/blueimp-gallery.css">
