--- a/stats.html
+++ b/stats.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 permalink: /stats
+title: Statistics
+description: "Book keeping and tracking our spending - you can see spending in local currencies before the trip and by country, with a conversion to USD. "
 ---
 
       
