--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 fontstyle: 'white'
+title: Year in a backpack
+description: "Backpacking travel adventure around America and Asia."
 ---
 <link href="/css/intro_{{ page.fontstyle }}.css" rel="stylesheet">
 
