--- a/tags.html
+++ b/tags.html
@@ -2,6 +2,7 @@
 layout: default
 permalink: /tags/
 title: Tags
+description: "Posts from Year in a Backpack sorted by tags - you can read posts related by topics."
 ---
 
 
