Mr Hyde was here …

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-fontstyle: 'black'
+fontstyle: 'white'
 title: "Year in a backpack"
 description: "Backpacking travel adventure around America and Asia."
 ---
