--- a/photo.html
+++ b/photo.html
@@ -25,7 +25,7 @@ description: "Photographs from two guys backpacking America and Asia."
         {% if image.path contains 'original' %}
     <li class="nopadding">
         <a class="nopadding" href="{{ site.baseurl }}{{ image.path }}" alt="{{ image.path }}">
-    <img placeholder="/img/sandwich.png" class="img-responsive lazy" data-original="{{ site.baseurl }}{{ image.path | replace: 'original', 'thumbnail' }}"  alt="{{ image.path }}">
+    <img src="/img/sandwich.png" class="img-responsive lazy" data-original="{{ site.baseurl }}{{ image.path | replace: 'original', 'thumbnail' }}"  alt="{{ image.path }}">
             <noscript>
     <img class="img-responsive" src="{{ site.baseurl }}{{ image.path | replace: 'original', 'thumbnail' }}"  alt="{{ image.path }}">
 </noscript>
