--- a/photo.html
+++ b/photo.html
@@ -57,5 +57,6 @@ document.getElementById('links').onclick = function (event) {
 <script src="/js/jquery.lazyload.js"></script>
 <script>$("img.lazy").show().lazyload({
     effect : "fadeIn",
-    placeholder : "/assets/icons/Yearinabackpack_logowhite.png"
+    placeholder : "/assets/icons/Yearinabackpack_logowhite.png",
+    skip_invisible: false
 });</script>
