--- a/photo.html
+++ b/photo.html
@@ -55,7 +55,7 @@ document.getElementById('links').onclick = function (event) {
 };
 </script>
 <script src="/js/jquery.lazyload.js"></script>
-<script>$("img.lazy").show().lazyload({
+<script>$("img").show().lazyload({
     effect : "fadeIn",
     placeholder : "/assets/icons/Yearinabackpack_logowhite.png",
     skip_invisible: false
