Mr Hyde was here …

--- a/photo.html
+++ b/photo.html
@@ -59,7 +59,7 @@ document.getElementById('links').onclick = function (event) {
 <script type= "text/javascript" >
   $(document).ready( function () {
       $( "img.lazy" )
-         .lazyload({
+         .show().lazyload({
              event: "lazyload" ,
              effect: "fadeIn" ,
              effectspeed: 2000,
