--- a/photo.html
+++ b/photo.html
@@ -44,6 +44,9 @@ description: "Photographs from two guys backpacking America and Asia."
 
 <script src="/js/jquery.min.js"></script>
 <script src="/js/blueimp-gallery.min.js"></script>
+<script
+src= "/js/jquery.scrollstop.js"
+type= "text/javascript" ></script>
 <script>
 document.getElementById('links').onclick = function (event) {
     event = event || window.event;
@@ -57,14 +60,7 @@ document.getElementById('links').onclick = function (event) {
 
 
 <script type= "text/javascript" >
-  $(document).ready( function () {
-      $( "img.lazy" )
-         .show().lazyload({
-             event: "lazyload" ,
-             effect: "fadeIn" ,
-             effectspeed: 2000,
-             placeholder : "/assets/icons/Yearinabackpack_logowhite.png"
-           })
-         .trigger( "lazyload" );
-  });
+  $( "img.lazy" ).lazyload({
+event : "scrollstop"
+});
 </script>
