Mr Hyde was here …

--- a/photo.html
+++ b/photo.html
@@ -60,7 +60,7 @@ document.getElementById('links').onclick = function (event) {
 
 
 <script type= "text/javascript" >
-  $( "img.lazy" ).lazyload({
+  $( "img.lazy" ).show().lazyload({
 event : "scrollstop"
 });
 </script>
