--- a/photo.html
+++ b/photo.html
@@ -60,7 +60,7 @@ document.getElementById('links').onclick = function (event) {
 
 
 <script type= "text/javascript" >$( document).ready( function() {
-$( "img.lazy" ).lazyload({
+$( "img" ).lazyload({
 event : "scrollstop"
 });
 });
