--- a/photo.html
+++ b/photo.html
@@ -26,7 +26,7 @@ description: "Photographs from two guys backpacking America and Asia."
         {% if image.path contains 'original' %}
     <li class="nopadding">
         <a class="nopadding" href="{{ site.baseurl }}{{ image.path }}" alt="{{ image.path }}">
-    <img class="lazy img-responsive" data-original="{{ site.baseurl }}{{ image.path | replace: 'original', 'thumbnail' }}"  alt="{{ image.path }}" width="100%" height="auto">
+    <img class="lazy img-responsive" data-original="{{ site.baseurl }}{{ image.path | replace: 'original', 'thumbnail' }}"  alt="{{ image.path }}" width="100%" height="100%">
             <noscript>
     <img class="img-responsive" src="{{ site.baseurl }}{{ image.path | replace: 'original', 'thumbnail' }}"  alt="{{ image.path }}">
 </noscript>
@@ -44,9 +44,6 @@ description: "Photographs from two guys backpacking America and Asia."
 
 <script src="/js/jquery.min.js"></script>
 <script src="/js/blueimp-gallery.min.js"></script>
-<script
-src= "/js/jquery.scrollstop.js"
-type= "text/javascript" ></script>
 <script>
 document.getElementById('links').onclick = function (event) {
     event = event || window.event;
@@ -59,10 +56,8 @@ document.getElementById('links').onclick = function (event) {
 </script>
 
 
-<script type= "text/javascript" >$( document).ready( function() {
-$( "img" ).lazyload({
-event : "scrollstop"
+<script>
+  $( "img.lazy" ).lazyload({
+effect : "fadeIn"
 });
-});
-  
 </script>
