--- a/photo.html
+++ b/photo.html
@@ -5,7 +5,6 @@ title: Photographs
 description: "Photographs from two guys backpacking America and Asia."
 ---
 <link rel="stylesheet" href="/css/blueimp-gallery.css">
-<link rel="stylesheet" href="/css/blueimp-gallery.css">
 
 <div id="blueimp-gallery" class="blueimp-gallery">
     <div class="slides"></div>
@@ -17,7 +16,6 @@ description: "Photographs from two guys backpacking America and Asia."
     <ol class="indicator"></ol>
 </div>
 
-<img src="/assets/icons/Yearinabackpack_logowhite.png" style="display: none">
     <h1 class="container center">Pics</h1>
 <div id="links">
     <ul class="row nopadding" id="photo-wall">
@@ -26,7 +24,7 @@ description: "Photographs from two guys backpacking America and Asia."
         {% if image.path contains 'original' %}
     <li class="nopadding">
         <a class="nopadding" href="{{ site.baseurl }}{{ image.path }}" alt="{{ image.path }}">
-    <img class="lazy img-responsive" data-original="{{ site.baseurl }}{{ image.path | replace: 'original', 'thumbnail' }}"  alt="{{ image.path }}" width="100%" height="100%">
+    <img class="lazy img-responsive" src="/assets/icons/Yearinabackpack_logowhite.png" style="display: none" data-original="{{ site.baseurl }}{{ image.path | replace: 'original', 'thumbnail' }}"  alt="{{ image.path }}" width="100%" height="100%">
             <noscript>
     <img class="img-responsive" src="{{ site.baseurl }}{{ image.path | replace: 'original', 'thumbnail' }}"  alt="{{ image.path }}">
 </noscript>
@@ -44,6 +42,7 @@ description: "Photographs from two guys backpacking America and Asia."
 
 <script src="/js/jquery.min.js"></script>
 <script src="/js/blueimp-gallery.min.js"></script>
+<script src="/js/jquery.lazyload.min.js></script>
 <script>
 document.getElementById('links').onclick = function (event) {
     event = event || window.event;
