--- a/photo.html
+++ b/photo.html
@@ -24,7 +24,7 @@ description: "Photographs from two guys backpacking America and Asia."
         {% if image.path contains 'original' %}
     <li class="nopadding">
         <a class="nopadding" href="{{ site.baseurl }}{{ image.path }}" alt="{{ image.path }}">
-    <img class="lazy img-responsive" src="/assets/icons/Yearinabackpack_logowhite.png" style="display: none" data-original="{{ site.baseurl }}{{ image.path | replace: 'original', 'thumbnail' }}"  alt="{{ image.path }}" width="100%" height="100%">
+    <img class="lazy img-responsive" src="/assets/icons/Yearinabackpack_logowhite.png" data-original="{{ site.baseurl }}{{ image.path | replace: 'original', 'thumbnail' }}"  alt="{{ image.path }}" width="100%" height="100%">
             <noscript>
     <img class="img-responsive" src="{{ site.baseurl }}{{ image.path | replace: 'original', 'thumbnail' }}"  alt="{{ image.path }}">
 </noscript>
@@ -56,7 +56,6 @@ document.getElementById('links').onclick = function (event) {
 
 
 <script>
-  $( "img.lazy" ).lazyload({
-effect : "fadeIn"
+  $(function() { $("img.lazy").lazyload({ effect : "fadeIn" });
 });
 </script>
