--- a/archive.html
+++ b/archive.html
@@ -6,9 +6,23 @@ description: "Older posts from Year in a Backpack. Sorted from most recent to ol
 ---
 <h1 class="center">Archive</h1>
 <ul class="journal row">
-  {% for post in site.posts %}
-    <li class="col-xs-12 col-sm-4 col-lg-3 center">
-        <a class="archive-title normal-font" href="{{ post.url }}"><b>{{ post.title }}</b><br> {{ post.date | date_to_long_string }}, {{ post.categories }}</a>
+  {% for post in site.posts limit: 3 %}
+    <li class="col-md-4">
+        {% for image in site.static_files %}
+    {% if image.path contains post.img and image.path contains 'thumbnail' and image.path contains 'lead' %}
+        <a href="{{ post.url }}"><img class="postImage" src="{{ image.path }}"></a>
+    {% endif %}
+    {% endfor %}
+        <a class="normal-font" href="{{ post.url }}"><h3>{{ post.title }}</h3></a>
+        <div>On {{ post.date | date_to_long_string }} in
+    {% assign categories = post.categories %}
+  {% for category in categories %} <a class="button archive-title country-button" href="{{site.url}}/countries/#{{category|slugize}}">{{category}}</a>
+  {% unless forloop.last %}&nbsp;{% endunless %}
+  {% endfor %}
+{% for tag in post.tags %}
+        <a class="button tag-button archive-title" href="{{ site.baseurl }}/tags#{{ tag | slugify }}">{{ tag }}</a>
+		 {% endfor %}
+        <a class="normal-font" href="{{ post.url }}"><p>{{ post.excerpt | truncatewords: 18 }}</p></a>  
     </li>
   {% endfor %}      
 </ul>
