--- a/tags.html
+++ b/tags.html
@@ -24,7 +24,7 @@ description: "Posts from Year in a Backpack sorted by tags - you can read posts 
   <div class="center">
     {% capture tag_name %}{{ tag | first }}{% endcapture %}
     <div id="#{{ tag_name | slugize }}"></div>
-    <h3 class="tag-head archive-title">{{ tag_name }}</h3>
+    <h3 class="tag-head archive-title button tag-button">{{ tag_name }}</h3>
     <a name="{{ tag_name | slugize }}"></a>
     {% for post in site.tags[tag_name] %}
     <article class="archive-item tags">
