--- a/tags.html
+++ b/tags.html
@@ -23,11 +23,10 @@ description: "Posts from Year in a Backpack sorted by tags - you can read posts 
 {% assign sorted_tags = (site.tags | sort:0) %}
 {% for tag in sorted_tags %}
   <div class="center">
-    {% capture tag_name %}{{ tag | first }}{% endcapture %}
-    <div id="#{{ tag_name | slugize }}"></div>
+    <div id="#{{ tag | slugize }}"></div>
     <h3 class="tag-head archive-title button tag-button">{{ tag | first }}</h3>
-    <a name="{{ tag_name | slugize }}"></a>
-    {% for post in sorted_tags[tag_name] %}
+    <a name="{{ tag | slugize }}"></a>
+    {% for post in site.tags[tag] %}
     <article class="archive-item tags">
       <h5>{{post.date | date_to_long_string}} <a href="{{ site.baseurl }}{{ post.url }}"> - <b>{{post.title}}</b></a> in <a class="button country-button archive-title" href="{{ site.baseurl }}/countries#{{ category_name }}">{{ post.categories }}</a></h5>
     </article>
