--- a/tags.html
+++ b/tags.html
@@ -26,7 +26,7 @@ description: "Posts from Year in a Backpack sorted by tags - you can read posts 
     <div id="#{{ tag | slugize }}"></div>
     <h3 class="tag-head archive-title button tag-button">{{ tag | first }}</h3>
     <a name="{{ tag | slugize }}"></a>
-    {% for post in site.tags[tag] %}
+    {% for post in sorted_tags[tag] %}
     <article class="archive-item tags">
       <h5>{{post.date | date_to_long_string}} <a href="{{ site.baseurl }}{{ post.url }}"> - <b>{{post.title}}</b></a> in <a class="button country-button archive-title" href="{{ site.baseurl }}/countries#{{ category_name }}">{{ post.categories }}</a></h5>
     </article>
