--- a/tags.html
+++ b/tags.html
@@ -20,18 +20,20 @@ description: "Posts from Year in a Backpack sorted by tags - you can read posts 
 {% endfor %}
 </div>
     <hr>
-{% assign sorted_tags = (site.tags | sort:0) %}
-{% for tag in sorted_tags %}
+    {% for item in (0..site.tags.size) %}{% unless forloop.last %}
+    {% capture tag %}{{ tag_words[item] | strip_newlines }}{% endcapture %}
   <div class="center">
-    <div id="#{{ tag | slugize }}"></div>
-    <h3 class="tag-head archive-title button tag-button">{{ tag | first | size }}</h3>
+    <div id="{{ tag | cgi_escape }}"></div>
+    <h3 class="tag-head archive-title button tag-button">{{ tag | first }}</h3>
     <a name="{{ tag | slugize }}"></a>
-    {% for post in sorted_tags[tag] %}
-    <article class="archive-item tags">
+   <ul class="posts">
+{% for post in site.tags[this_word] %}{% if post.title != null %}
+       <article class="archive-item tags">
       <h5>{{post.date | date_to_long_string}} <a href="{{ site.baseurl }}{{ post.url }}"> - <b>{{post.title}}</b></a> in <a class="button country-button archive-title" href="{{ site.baseurl }}/countries#{{ category_name }}">{{ post.categories }}</a></h5>
     </article>
-    {% endfor %}
-      
+           {% endif %}{% endfor %}
+      </ul>
+        {% endunless %}{% endfor %}
   </div>
 {% endfor %}
 </div>
