--- a/archive.html
+++ b/archive.html
@@ -4,11 +4,13 @@ permalink: /archive
 title: Archive
 description: "Older posts from Year in a Backpack. Sorted from most recent to oldest."
 ---
+<div>
 <h1 class="center">Archive</h1>
+
 <ul class="journal row">
   {% for post in site.posts %}
-     <li class="col-md-4">
-       {% for image in site.static_files %}
+    <li class="col-md-4">
+        {% for image in site.static_files %}
     {% if image.path contains post.img and image.path contains 'thumbnail' and image.path contains 'lead' %}
         <a href="{{ post.url }}"><img class="postImage" src="{{ image.path }}"></a>
     {% endif %}
@@ -23,7 +25,8 @@ description: "Older posts from Year in a Backpack. Sorted from most recent to ol
         <a class="button tag-button archive-title" href="{{ site.baseurl }}/tags#{{ tag | slugify }}">{{ tag }}</a>
 		 {% endfor %}
         <a class="normal-font" href="{{ post.url }}"><p>{{ post.excerpt | truncatewords: 18 }}</p></a>  
-      </li>
-    {% endfor %}      
+    </li>
+  {% endfor %}      
 </ul>
+</div>
 {% include signature.html %}
