--- a/tags.html
+++ b/tags.html
@@ -27,13 +27,13 @@ description: "Posts from Year in a Backpack sorted by tags - you can read posts 
     <h3 class="tag-head archive-title button tag-button">{{ tag | first }}</h3>
     <a name="{{ tag | slugize }}"></a>
    <ul class="posts">
-{% for post in site.tags[this_word] %}{% if post.title != null %}
+{% for post in site.tags[this_word] %}
        <article class="archive-item tags">
       <h5>{{post.date | date_to_long_string}} <a href="{{ site.baseurl }}{{ post.url }}"> - <b>{{post.title}}</b></a> in <a class="button country-button archive-title" href="{{ site.baseurl }}/countries#{{ category_name }}">{{ post.categories }}</a></h5>
     </article>
-           {% endif %}{% endfor %}
+           {% endfor %}
       </ul>
-        {% endunless %}{% endfor %}
+        {% endfor %}
   </div>
 {% endfor %}
 </div>
