--- a/tags.html
+++ b/tags.html
@@ -20,20 +20,18 @@ description: "Posts from Year in a Backpack sorted by tags - you can read posts 
 {% endfor %}
 </div>
     <hr>
-    {% for item in (0..site.tags.size) %}{% unless forloop.last %}
-    {% capture tag %}{{ tag_words[item] | strip_newlines }}{% endcapture %}
+{% for tag in site.tags %}
   <div class="center">
-    <div id="{{ tag | cgi_escape }}"></div>
-    <h3 class="tag-head archive-title button tag-button">{{ tag | first }}</h3>
-    <a name="{{ tag | slugize }}"></a>
-   <ul class="posts">
-{% for post in site.tags[this_word] %}
-       <article class="archive-item tags">
+    {% capture tag_name %}{{ tag | first }}{% endcapture %}
+    <div id="#{{ tag_name | slugize }}"></div>
+    <h3 class="tag-head archive-title">{{ tag_name }}</h3>
+    <a name="{{ tag_name | slugize }}"></a>
+    {% for post in site.tags[tag_name] %}
+    <article class="archive-item tags">
       <h5>{{post.date | date_to_long_string}} <a href="{{ site.baseurl }}{{ post.url }}"> - <b>{{post.title}}</b></a> in <a class="button country-button archive-title" href="{{ site.baseurl }}/countries#{{ category_name }}">{{ post.categories }}</a></h5>
     </article>
-           {% endfor %}
-      </ul>
-        {% endfor %}
+    {% endfor %}
+      
   </div>
 {% endfor %}
 </div>
