--- a/archive.html
+++ b/archive.html
@@ -6,7 +6,7 @@ description: "Older posts from Year in a Backpack. Sorted from most recent to ol
 ---
 <div>
 <h1 class="center">Archive</h1>
-
+<div class="container">
 <ul class="journal row">
 {% for post in site.posts %}
     <li class="col-md-4" id="archive-child">
@@ -28,5 +28,6 @@ description: "Older posts from Year in a Backpack. Sorted from most recent to ol
 		</li>
 {% endfor %}
 	</ul>
+	</div>
 </div>  
 {% include signature.html %}
