--- a/tags.html
+++ b/tags.html
@@ -19,6 +19,23 @@ description: "Posts from Year in a Backpack sorted by tags - you can read posts 
 </div>
     <hr>
 
+    {% for tag in site.tags %}
+  {% assign t = tag | first %}
+  {% assign posts = tag | last %}
+
+{{ t | downcase }}
+<ul>
+{% for post in posts %}
+  {% if post.tags contains t %}
+  <li>
+    <a href="{{ post.url }}">{{ post.title }}</a>
+    <span class="date">{{ post.date | date: "%B %-d, %Y"  }}</span>
+  </li>
+  {% endif %}
+{% endfor %}
+</ul>
+{% endfor %}
+    
 {% assign sorted_tags = (site.tags | sort:0) %}
 {% for tag in sorted_tags %}
   <div class="center">
