--- a/tags.html
+++ b/tags.html
@@ -19,22 +19,6 @@ description: "Posts from Year in a Backpack sorted by tags - you can read posts 
 </div>
     <hr>
 
-    {% for tag in site.tags %}
-  {% assign t = tag | first %}
-  {% assign posts = tag | last %}
-
-{{ t | downcase }}
-<ul>
-{% for post in posts %}
-  {% if post.tags contains t %}
-  <li>
-    <a href="{{ post.url }}">{{ post.title }}</a>
-    <span class="date">{{ post.date | date: "%B %-d, %Y"  }}</span>
-  </li>
-  {% endif %}
-{% endfor %}
-</ul>
-{% endfor %}
     
 {% assign sorted_tags = (site.tags | sort:0) %}
 {% for tag in sorted_tags %}
@@ -43,7 +27,7 @@ description: "Posts from Year in a Backpack sorted by tags - you can read posts 
     <div id="#{{ tag_name | slugize }}"></div>
     <h3 class="tag-head archive-title button tag-button">{{ tag_name }}</h3>
     <a name="{{ tag_name | slugize }}"></a>
-    {% for post in sorted_tags[tag_name] %}
+    {% for post in site.tags[tag_name] %}
     <article class="archive-item tags">
       <h5>{{post.date | date_to_long_string}} <a href="{{ site.baseurl }}{{ post.url }}"> - <b>{{post.title}}</b></a> in <a class="button country-button archive-title" href="{{ site.baseurl }}/countries#{{ category_name }}">{{ post.categories }}</a></h5>
     </article>
