--- a/countries.html
+++ b/countries.html
@@ -8,8 +8,9 @@ description: "Posts from Yearinabackpack sorted by country. "
 <div class="container">
 <h1 class="center">Countries</h1>
 <p class="center">Our backpacking journal sorted by countries - read posts by their location.</p>
-<div class="tag-box">
+
 {% assign sorted_categories = (site.categories | sort:0) %}
+<div class="tag-box">
 {% for category in sorted_categories %}
     <a class="button country-button archive-title" href="#{{ category|slugize }}">{{ category | first }}</a>
 	    {% unless forloop.last %}&nbsp;{% endunless %}
@@ -27,8 +28,8 @@ description: "Posts from Yearinabackpack sorted by country. "
     {% for post in site.categories[category_name] %}
     <article class="archive-item countries">
       <h5>{{post.date | date_to_long_string}} - <a href="{{ site.baseurl }}{{ post.url }}"><b>{{post.title}} 
-</b> </a>{% for tag in post.tags %}
-        <a class="archive-title button tag-button" href="{{ site.baseurl }}/tags#{{ tag | slugify }}">{{ tag }}</a>
+</b> </a>
+        <a class="archive-title button tag-button" href="{{ site.baseurl }}/tags#{{ tag | slugify }}">{{ tag }}</a>{% unless forloop.last %}&nbsp;{% endunless %}
 		 {% endfor %}</h5>
     </article>
     {% endfor %}
