--- a/countries.html
+++ b/countries.html
@@ -12,7 +12,7 @@ description: "Posts from Yearinabackpack sorted by country. "
 {% assign sorted_categories = (site.categories | sort:0) %}
 <div class="tag-box">
 {% for category in sorted_categories %}
-    <a class="button country-button archive-title" href="#{{ category|slugize }}">{{ category | first }}</a>
+    <a href="#{{ category | slugize }}" class="button country-button archive-title" >{{ category | first }}</a>
 	    {% unless forloop.last %}&nbsp;{% endunless %}
 {% endfor %}
 </div>
