--- a/countries.html
+++ b/countries.html
@@ -10,10 +10,10 @@ description: "Posts from Yearinabackpack sorted by country. "
 <p class="center">Our backpacking journal sorted by countries - read posts by their location.</p>
 	
 {% assign sorted_categories = (site.categories | sort:0) %}
-<div class="tag-box">
+<div style="tag-box">
 {% for category in sorted_categories %}
-    <a href="#{{ category | slugize }}" class="button country-button archive-title" >{{ category | first }}</a>
-	    {% unless forloop.last %}&nbsp;{% endunless %}
+<a href="#{{ category | slugize}}" class="button country-button">{{ category | first }}</a>
+    {% unless forloop.last %}&nbsp;{% endunless %}
 {% endfor %}
 </div>
     <hr>	
