--- a/tags.html
+++ b/tags.html
@@ -13,7 +13,8 @@ description: "Posts from Year in a Backpack sorted by tags - you can read posts 
     {% assign sorted_tags = (site.tags | sort:0) %}
 <div style="tag-box">
 {% for tag in sorted_tags %}
-<a href="#{{ tag | slugize }}" class="button tag-button">{{ tag | first }}</a>
+        {% capture tag_name %}{{ tag | first }}{% endcapture %}
+<a href="#{{ tag_name | slugize }}" class="button tag-button">{{ tag | first }}</a>
     {% unless forloop.last %}&nbsp;{% endunless %}
 {% endfor %}
 </div>
