--- a/countries.html
+++ b/countries.html
@@ -31,8 +31,10 @@ description: "Posts from Yearinabackpack sorted by country. "
     <article class="archive-item countries">
       <h5>{{post.date | date_to_long_string}} - <a href="{{ site.baseurl }}{{ post.url }}"><b>{{post.title}} 
 </b> </a>
+	      {% for tag in post.tags %}
         <a class="archive-title button tag-button" href="{{ site.baseurl }}/tags#{{ tag | slugify }}">{{ tag }}</a>{% unless forloop.last %}&nbsp;{% endunless %}</h5> 
-    </article>
+        {% endfor %}
+	  </article>
     {% endfor %}
   </div>
 {% endfor %}
