--- a/countries.html
+++ b/countries.html
@@ -32,8 +32,9 @@ description: "Posts from Yearinabackpack sorted by country. "
       <h5>{{post.date | date_to_long_string}} - <a href="{{ site.baseurl }}{{ post.url }}"><b>{{post.title}} 
 </b> </a>
 	      {% for tag in post.tags %}
-        <a class="archive-title button tag-button" href="{{ site.baseurl }}/tags#{{ tag | slugify }}">{{ tag }}</a>{% unless forloop.last %}&nbsp;{% endunless %}</h5> 
-        {% endfor %}
+        <a class="archive-title button tag-button" href="{{ site.baseurl }}/tags#{{ tag | slugify }}">{{ tag }}</a>{% unless forloop.last %}&nbsp;{% endunless %}
+	            {% endfor %}
+	    </h5> 
 	  </article>
     {% endfor %}
   </div>
