--- a/journal.html
+++ b/journal.html
@@ -55,6 +55,17 @@ description: "Travel blog from Year in a backpack. Read our regular posts and en
     <a class="button country-button archive-title" href="{{ site.baseurl }}/countries#{{ category_name }}">{{ category_name }}</a>
     {% endfor %}
     
+	<hr>
+	
+	{% assign sorted_categories = (site.categories | sort:0) %}
+<div style="tag-box">
+{% for category in sorted_categories %}
+	    {% capture category_name %}{{ category | first }}{% endcapture %}
+<a href="{{ site.baseurl }}/countries#{{ category_name | slugize}}" class="archive-title button country-button">{{ category | first }}</a>
+    {% unless forloop.last %}&nbsp;{% endunless %}
+{% endfor %}
+</div>
+	
     </div>
 <hr>
 
