--- a/photo.html
+++ b/photo.html
@@ -12,6 +12,7 @@ description: "Photographs from two guys backpacking America and Asia."
 {% for category in sorted_categories %}
   <div class="archive-title center">
     {% capture category_name %}{{ category | first }}{% endcapture %}
+	  <div class="container">
     <h3 id="#{{ category_name | slugize }}" class="category-head">{{ category_name }}</h3>
           	  <div class="col-md-4">
 	  {% for post in site.categories[category_name] %}
@@ -24,6 +25,7 @@ description: "Photographs from two guys backpacking America and Asia."
 			  	  </div>
     {% endfor %}
   </div>
+	</div>
 {% endfor %}
     </div>
 
