--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ description: "Backpacking travel adventure around America and Asia."
 ---
 <link href="/css/intro_{{ page.fontstyle }}.css" rel="stylesheet">
 
-<div class="container content center">
+<div class="container-fluid content center">
         <div class="logo-main">
           <img src="/assets/icons/Yearinabackpack_logo{{ page.fontstyle }}.png">
         
