--- a/landing_example.html
+++ b/landing_example.html
@@ -17,8 +17,9 @@ html, body {
 }
 
 .intro {
-    display:block;
+    display:table;
     width:100%;
+    height: 100%;
     margin:auto;
     background: url(/assets/intro_cover/cover.jpg) no-repeat 50% 50%;
     background-size:cover;
