--- a/landing_example.html
+++ b/landing_example.html
@@ -30,12 +30,7 @@ html, body {
     width:100%;
     max-width:none;
 }
-.content {
-    padding:10px;
-    background:rgba(255,255,255,0.4);
-    max-width:960px;
-    margin:auto;
-}
+
 .inner {
     max-width:600px;
     margin:auto;
@@ -51,10 +46,10 @@ html, body {
 </style>
 </head>
 
-<body>
+<body class="nopadding">
 <div class="intro">
         <div class="inner">
-                <div class="content">
+                <div class="nopadding">
                         <img src="/assets/icons/Yearinabackpack_logo{{ page.fontstyle }}.png">
         
           <div class="logo-main-margin list-inline">
