--- a/landing_example.html
+++ b/landing_example.html
@@ -50,7 +50,7 @@ html, body {
 <body class="nopadding">
 <div class="intro">
         <div class="inner">
-                <div class="nopadding">
+                <div class="nopadding logo-main">
                         <img src="/assets/icons/Yearinabackpack_logo{{ page.fontstyle }}.png">
         
           <div class="logo-main-margin list-inline">
