--- a/landing_example.html
+++ b/landing_example.html
@@ -25,25 +25,12 @@ html, body {
     background: url(/assets/intro_cover/cover.jpg) no-repeat 50% 50%;
     background-size:cover;
 }
-.intro .inner {
-    display:table-cell;
-    vertical-align:top;
-    width:100%;
-    max-width:none;
-}
 
-.inner {
-    max-width:600px;
-    margin:auto;
-    font-size:140%;
-    line-height:1.6;
-    padding:10px
-}
 .page {
     width:80%;
     margin:auto;
 }
-.page .inner p { padding:2em 0 0 }
+
     
 .vertical {position: relative;
   top: 50%;
@@ -67,12 +54,8 @@ html, body {
         </div>
 </div>
 <div class="page">
-        <div class="inner">
-                <p>Dream of the mind's eye gathered by gravity, decipherment globular star cluster brain is the seed of intelligence! Are creatures of the cosmos preserve and cherish that pale blue dot Vangelis kindling the energy hidden in matter. Venture light years culture billions upon billions, corpus callosum descended from astronomers two ghostly white figures in coveralls and helmets are soflty dancing Apollonius of Perga. The sky calls to us, inconspicuous motes of rock and gas the only home we've ever known, paroxysm of global death finite but unbounded cosmic fugue paroxysm of global death something incredible is waiting to be known laws of physics, tesseract, encyclopaedia galactica decipherment. Stirred by starlight. Great turbulent clouds decipherment!</p>
-        </div>
-        <div class="inner">
-                <p>Rogue colonies rogue, Vangelis the only home we've ever known cosmic ocean, ship of the imagination. Rig Veda, the ash of stellar alchemy. Citizens of distant epochs shores of the cosmic ocean Orion's sword. Rich in mystery! Preserve and cherish that pale blue dot rich in heavy atoms Sea of Tranquility, a billion trillion rings of Uranus, extraplanetary light years Apollonius of Perga. Consciousness concept of the number one emerged into consciousness preserve and cherish that pale blue dot, take root and flourish. The carbon in our apple pies consciousness finite but unbounded culture the carbon in our apple pies.</p>
-        </div>
+    <h1>About</h1>
+    <p>This is going to be the about section of year in a backpack.</p>
 </div>
 
 </body>
