--- a/landing_example.html
+++ b/landing_example.html
@@ -32,15 +32,17 @@ html, body {
 }
 
     
-.vertical {position: relative;
-  top: 50%;
-    transform: translateY(-50%);}
+.vertical {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+}
 </style>
 </head>
 
 <body class="nopadding">
 <div class="intro">
-                <div class="nopadding logo-main vertical">
+                <div class="nopadding vertical">
                         <img src="/assets/icons/Yearinabackpack_logo{{ page.fontstyle }}.png">
         
           <div class="logo-main-margin list-inline">
