--- a/landing_example.html
+++ b/landing_example.html
@@ -42,7 +42,7 @@ html, body {
 
 <body class="nopadding">
 <div class="intro">
-                <div class="nopadding vertical">
+                <div class="nopadding logo-main">
                         <img src="/assets/icons/Yearinabackpack_logo{{ page.fontstyle }}.png">
         
           <div class="logo-main-margin list-inline">
