--- a/landing_example.html
+++ b/landing_example.html
@@ -55,7 +55,7 @@ html, body {
                     <p>Two backpackers discovering the wonders of south america and asia.</p>
         </div>
 </div>
-<div class="page">
+<div class="content">
     <h1>About</h1>
     <p>This is going to be the about section of year in a backpack.</p>
 </div>
